<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/vehicle">
        <ListPreference
            app:entries="@array/vehicle_types"
            app:entryValues="@array/vehicle_types_values"
            app:key="@string/preferences_vehicle_type"
            app:title="@string/vehicletype" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/regulations">
        <de.jadehs.mvl.settings.preferences.TimePreference
            app:defaultValue="@string/max_time_driving_default"
            app:key="@string/preferences_max_time_drive"
            app:title="@string/max_time_driving" />
    </PreferenceCategory>

    <CheckBoxPreference
        app:defaultValue="false"
        app:key="@string/preferences_accepted_privacy_policy"
        app:summary="@string/only_active_after_reboot"
        app:title="@string/privacy_notice_accepted" />

</PreferenceScreen>